BOOKCLUB/bookclub.css
/* ... */
.parallax-7 {
  /* The image used */
    background-image: url('./images/bazhov_bg_4.jpg');

    /* Full height */
    min-height: 80%; 
    position: relative;
    opacity: .9;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-size: 100% 100%;
}

.parallax-ind {
 /* The image used */
    background-image: url('./images/indians_bg_1.jpg');

    /* Full height */
    height: 100%; 
    position: relative;
    opacity: 0.75;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover; 
    background-size: 100% 100%;
}

.parallax-ind-2 {
 /* The image used */
    background-image: url('./images/indians_bg_2.jpeg');

    /* Full height */
    height: 100%; 
    position: relative;
    opacity: 0.75;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover; 
    background-size: 100% 100%;
}

.parallax-ind-3 {
 /* The image used */
    background-image: url('./images/indians_bg_3.jpg');

    /* Full height */
    height: 100%; 
    position: relative;
    opacity: 0.75;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-size: 100% 100%; 
}

.parallax-kur-1 {
    background-size: cover; 
  /* The image used */
    background-image: url('./images/kurolesov_bg_1.jpg');

    /* Full height */
    height: 100%; 
    position: relative;
    opacity: 1;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100% 100%;
}

.parallax-kur-2 {
    background-size: cover; 
  /* The image used */
    background-image: url('./images/kurolesov_bg_2.jpg');

    /* Full height */
    height: 100%; 
    position: relative;
    opacity: 1;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover; 
    background-size: 100% 100%;
}


.parallax-tri-tol-1 {
    background-size: cover; 
  /* The image used */
    background-image: url('./images/tri_tol_1.jpg');

    /* Full height */
    height: 100%; 
    position: relative;
    opacity: 1;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-size: 100% 100%;
}

.parallax-tri-tol-2 {
    background-size: cover; 
  /* The image used */
    background-image: url('./images/tri_tol.jpg');

    /* Full height */
    height: 50%; 
    position: relative;
    opacity: 1;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-size: 100% 100%; 
}

.parallax-tri-tol-3 {
    background-size: cover; 
  /* The image used */
    background-image: url('./images/tri_tol_2.jpg');

    /* Full height */
    height: 100%; 
    position: relative;
    opacity: 1;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover; 
    background-size: 100% 100%;
}




.cover-container {
  margin-right: auto;
  margin-left: auto;
}



/* Padding for spacing */

.panel {
  margin-top: 10%;
  margin-bottom: 10%;
}

/*
 * Header
 */

#navbar,
#navbar-tri-tol {
  margin-top: 2%;
  padding-left: 5%;
  text-align: start;
}

a.nav-link,
a.nav-link-readers {
  border-bottom: 2px solid transparent;
}

a.nav-link:hover,
a.nav-link:focus {
border-bottom-color: #a9a9a9;
border-bottom-color: rgba(255,255,255,.35);  
}

a.nav-link-readers:hover,
a.nav-link-readers:focus {
border-bottom-color: rgba(230, 115, 0, .35); /*orange*/
}

a.nav-link.active {
color: #fff;
border-bottom-color: #fff;  
}

a.nav-link-readers.active {
 color: #e67300;
 border-bottom-color: #e67300;
 
}

.navbar-brand span{
  font-family: Zapfino;
  font-size: 2rem;
  /* margin-bottom: 1rem;*/
  font-style: italic;
  text-align: left;
  line-height: 2;
  color: #fff;
}

#navbarNavDropdown a {
  color: #fff;
  text-shadow: 0 1px 3px rgba(0,0,0,.5);
  font-size: 1.2rem;
}

#navbarNavDropdown-readers a {
 color:  #e67300;
 text-shadow: 0 1px 3px rgba(0,0,0,.5);
 font-size: 1.2rem; 
}

.navbar-toggler {
  background-color: rgba(255,255,255,.80);
}

div.dropdown-menu {
width: 100%;
background-color: rgba(255,255,255,.8);
border: none;
border-radius: 0;
}

#navbarNavDropdown a.dropdown-item {
  color: #150d04;
}

#navbarNavDropdown a.dropdown-item, #navbarNavDropdown-readers a.dropdown-item {
  font-size: 1rem;
}

#navbarNavDropdown a.dropdown-item.active {
  background-color: #e67300;
}

/*
 * Cover
 */

.cover {
  padding: 0 20px;
 }

a.btn-secondary.btn-lg.btn-block {
  padding: 10px 20px;
  font-weight: bold;
  opacity: .5;
  text-decoration: none;
}
a.btn-secondary.btn-lg.btn-block:hover {
  opacity: 1;
}

.cover p.lead {
  font-style: italic;
}


/*
 * Footer
 */

#footer {
 padding-left: 0;
 padding-right: 0;
}

#footer span {
  width: 100%;
  color: #999; /* IE8 proofing */
  color: rgba(255,255,255,.8);
  text-align: center;
 }


#up-btn {
color: rgba(255,255,255,.8);
font-size: 1.25rem;
padding: 15px;
background-color: #111;
opacity: .8;
border-radius: 2rem;
position: fixed;
bottom: 10rem;
right: 0;
cursor: pointer;
text-decoration: none;
display: none;
z-index: 99;
}
/* ... */

